src/styles.css
/* ... */
#window-background.animated>div {
	animation: fade-background .4s linear 1.1s forwards;
	filter: blur(20px) brightness(0%);
}

@keyframes fade-background {
	0% {
		filter: blur(20px) brightness(0%);
	}

	100% {
		filter: blur(2px) brightness(100%);
	}
}

#launch-bar {
	position: fixed;
	bottom: 40px;
	left: 0;
	width: 100%;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 15px;
}

#play-logo {
    width: 350px;
    opacity: 0;
    animation: logo-back-down .8s cubic-bezier(.7,.89,.35,1.31) forwards;
}

@keyframes logo-back-down {
    0% {
        opacity: 0;
        transform: perspective(1000px) translateY(-160px) translateZ(200px) rotateX(-15deg);
    }

    100% {
        opacity: 1;
        transform: perspective(1000px) translateY(0) translateZ(0) rotateX(0deg);
    }
}

#launch-actions {
	display: flex;
	flex-direction: row;
	gap: 5px;
}

#play-button {
    width: 250px; /*120px*/
	animation: fade-slide-up .8s cubic-bezier(.17,.67,.42,1.55) .5s forwards;
	opacity: 0;
	z-index: 2;
}

#servers-button, #discover-button {
    width: 40px;
	opacity: 0;
}

#servers-button {
	animation: fade-slide-right .3s cubic-bezier(.17,.67,.57,1.42) 1.3s forwards;
}

#discover-button {
	animation: fade-slide-left .3s cubic-bezier(.17,.67,.57,1.42) 1.3s forwards;
}

@keyframes fade-slide-up {
	0% {
		transform: translateY(60px);
		opacity: 0;
	}

	100% {
		transform: translateY(0);
		opacity: 1;
	}
}

@keyframes fade-slide-right {
	0% {
		transform: translateX(-30px);
		opacity: 0;
	}

	100% {
		transform: translateX(0);
		opacity: 1;
	}
}

@keyframes fade-slide-left {
	0% {
		transform: translateX(30px);
		opacity: 0;
	}

	100% {
		transform: translateX(0);
		opacity: 1;
	}
}

/* Taken from https://codepen.io/joexmdq/pen/EOMLzg. All credit given. Modified slightly */
/* Minecraft Style Button */
.mc-button {
	height: var(--btn-size);
	width: calc(var(--btn-size) * 10);
	cursor: pointer;
	overflow: hidden;
	white-space: nowrap;
	user-select: none;

    font: 12pt 'Minecraftia', sans-serif;

	background: #999 url('https://i.ibb.co/rb2TWXL/bgbtn.png') center / cover;
	image-rendering: pixelated;
	border: 2px solid #000;
	
	/* Mouse over */
	&:hover .title {
		background-color: rgba(100, 100, 255, .45);
		text-shadow: 2px 2px #202013CC;
		color: #FFFFA0;
	}
	&:active .title {
		box-shadow: inset -2px -4px #0004, inset 2px 2px #FFF5;
	}
	/* Button title */
	.title {
		width: 100%; height: 100%;
		padding-bottom: .3em;

        display: flex;
        align-items: center;
        justify-content: center;
		
		color: #DDD;
		text-shadow: 2px 2px #000A;
		box-shadow: inset -2px -4px #0006, inset 2px 2px #FFF7;
	}
	/* Others */
	&.full { width: 100%; height: 100%; }
	&.lang {
		& img { width: 26px; height: 26px;}
		& .title  { padding-bottom: 0; } }
}

